--- a/templates/500.html
+++ b/templates/500.html
@@ -1,22 +1,8 @@
-<!-- templates/500.html -->
 <!DOCTYPE html>
-<html lang="vi">
-<head>
-  <meta charset="UTF-8">
-  <title>Lỗi máy chủ</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding-top: 100px;
-    }
-    h1 {
-      color: red;
-    }
-  </style>
-</head>
+<html>
+<head><title>500 Server Error</title></head>
 <body>
-  <h1>500 - Lỗi máy chủ nội bộ</h1>
-  <p>Xin lỗi, đã xảy ra sự cố trên hệ thống. Vui lòng thử lại sau!</p>
+    <h1>500 - Lỗi máy chủ</h1>
+    <p>Đã xảy ra lỗi. Vui lòng thử lại sau!</p>
 </body>
 </html>
